myteo/test/analyze/type_check/logical_operation.exp
Error: Expected type `Bool` but found `Int`
test/analyze/type_check/logical_operation.myte:7:3
 7 |   (1 && false: Bool);
   |    ^

Error: Expected type `Bool` but found `Int`
test/analyze/type_check/logical_operation.myte:8:12
 8 |   (false && 1: Bool);
   |             ^

Error: Expected type `Bool` but found `Unit`
test/analyze/type_check/logical_operation.myte:9:3-5
 9 |   (() && "a": Bool);
   |    ^^

Error: Expected type `Bool` but found `String`
test/analyze/type_check/logical_operation.myte:9:9-12
 9 |   (() && "a": Bool);
   |          ^^^