myteo/test/analyze/type_check/logical_operation.myte
module Test

fun main() {
  (true && false: Bool);
  (true || false: Bool);

  (1 && false: Bool);
  (false && 1: Bool);
  (() && "a": Bool);
}